# crewai-runner

./: .dockerignore  .env.example  .gitignore  AI_RULES.md  API_SCHEMA.md  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  README.md  Taskfile.yml  docker-compose.dev.yml  docker-compose.yml  pnpm-lock.yaml  pyproject.toml  verify_structure.sh
api/: .env.example  AGENTS.md  API_PATH_UPDATE_SUMMARY.md  AUTHENTICATION_UPDATE_SUMMARY.md  COMPREHENSIVE_TEST_FIXES.md  CONFIG_API_TEST_FIXES.md  Dockerfile  README.md  __init__.py  auth.py  config.py  main.py  minimal_test.py  pyproject.toml  requirements.txt  run_server.py  test_auth.py  test_profiles.py  test_profiles_direct.py  test_structure.py  update_test_auth.py
api/.tmp/: debug_yaml_test.py  fix_yaml_tests.py
api/examples/config/: README.md  config.yaml  development_team.yaml  marketing_team.yaml  research_team.yaml
api/profiles/: default.yaml  ollama.yaml  test-profile-save-1762787017.yaml  test-profile-save-1762787023.yaml  test-profile-save-1762788047.yaml  test-profile-save-1762788054.yaml  test-profile-save-1762788374.yaml  test-profile-save-1762788386.yaml  test-profile-save-1762802927.yaml  test-profile-save-1762803061.yaml  test-profile-save-1762804309.yaml  test-profile-save-1762804334.yaml  test-profile-save-1762804463.yaml  test-profile-save-1762805622.yaml  test-profile-save-1762810266.yaml  test-profile.yaml  timestamp-test.yaml  unique-test-profile-save.yaml
api/routers/: chat.py  models.py  providers.py  workflows.py  yaml_validator.py
api/src/engine/: auth.py  (+6 more)
api/tests/: conftest.py  test_mcp.py  test_orchestrator.py
(+97 files in other folders)
