[project]
name = "crewai-runner-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0.0",
    "crewai>=0.76.0",
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "mcp>=1.21.0",
]

[project.scripts]
crewai-runner-api = "src.engine:main"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.1"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.vcs]
version-file = "src/engine/_version.py"

[project.optional-dependencies]
standard = []
test = ["pytest", "pytest-cov", "mypy", "ruff", "httpx", "pytest-asyncio", "black"]
dev = ["ruff", "black", "isort", "mypy"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings", "mkdocs-click", "mdtoc", "mkdocs-mermaid2-plugin", "mkdocs-material", "mkdocs-llmstxt"]
lint = ["ruff", "black", "isort", "mypy"]
format = ["black", "isort"]
typecheck = ["mypy"]
embeddings = ["chromadb>=1.2.1", "sentence-transformers>=5.1.2", "openai>=1.0.0", "voyageai>=0.2.0"]
